# secureshell-pro

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build-release.yml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: crypto.rs  lib.rs  main.rs  vault.rs
src-tauri/src/commands/: clipboard.rs  connections.rs  groups.rs  keys.rs  mod.rs  settings.rs  sftp.rs  snippets.rs  ssh.rs
src-tauri/src/db/: migrations.rs  mod.rs  models.rs
src-tauri/src/sftp/: mod.rs
src-tauri/src/ssh/: mod.rs
src-tauri/src/sync/: discovery.rs  identity.rs  listener.rs  mod.rs  pairing.rs  peer_store.rs  protocol.rs  transport.rs
src/assets/fonts/: OFL.txt
src/js/: api.js  app.js  titlebar.js
src/js/components/: card-grid-page.js  custom-select.js  edit-modal.js  folder-grid.js  form-builder.js  list-detail-view.js  modal.js  tag-input.js  toast.js
src/js/utils/: accent-themes.js  clipboard.js  helpers.js  icons.js  snippet-vars.js
src/js/views/: commands.js  hosts.js  keys.js  settings.js  sftp.js  terminal.js  vault-gate.js
src/styles/: commands.css  components.css  fonts.css  hosts.css  keys.css  main.css  settings.css  sftp.css  sidebar.css  sync.css  terminal.css  titlebar.css  vault.css
